Testprogrammas/.metadata/.plugins/org.eclipse.cdt.ui/testTimer.build.log
10:55:39 **** Incremental Build of configuration Debug for project testTimer ****
make all 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal.o" "../system/Src/stm32f4-hal/stm32f4xx_hal.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_cortex.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_cortex.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_cortex.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_cortex.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_cortex.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_cortex.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_flash.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_flash.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_flash.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_flash.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_flash.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_flash.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_gpio.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_gpio.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_gpio.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_gpio.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_gpio.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_gpio.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_iwdg.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_pwr.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_pwr.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_pwr.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_pwr.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_pwr.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_pwr.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_rcc.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_rcc.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_rcc.o" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_rcc.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_rcc.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_rcc.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_tim.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_tim.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_tim.d" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_tim.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_tim.c"
Finished building: ../system/Src/stm32f4-hal/stm32f4xx_hal_tim.c
 
Building file: ../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F411xE -DUSE_HAL_DRIVER -DHSE_VALUE=96000000 -I"../Inc" -I"../system/Inc" -I"../system/Inc/cmsis" -I"../system/Inc/stm32f4-hal" -std=gnu11 -Wno-bad-function-cast -Wno-conversion -Wno-sign-conversion -Wno-unused-parameter -Wno-sign-compare -Wno-missing-prototypes -Wno-missing-declarations -MMD -MP -MF"system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.d" -MT"system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.d" -c -o "system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.o" "../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c"
../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c: In function 'HAL_InitTick':
../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c:81:24: error: 'TIM6_DAC_IRQn' undeclared (first use in this function)
   HAL_NVIC_SetPriority(TIM6_DAC_IRQn, TickPriority ,0U);
                        ^
../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c:81:24: note: each undeclared identifier is reported only once for each function it appears in
../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c:87:3: warning: implicit declaration of function '__HAL_RCC_TIM6_CLK_ENABLE' [-Wimplicit-function-declaration]
   __HAL_RCC_TIM6_CLK_ENABLE();
   ^
../system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.c:109:24: error: 'TIM6' undeclared (first use in this function)
   TimHandle.Instance = TIM6;
                        ^
make: *** [system/Src/stm32f4-hal/stm32f4xx_hal_timebase_tim_template.o] Error 1

10:55:42 Build Finished (took 2s.936ms)

